fixing edit links on mobile

--- a/src/app/(BioLayout)/biolayout.css
+++ b/src/app/(BioLayout)/biolayout.css
@@ -54,8 +54,8 @@ a:focus-visible {
 }
 
 .arrow-card-start {
-  -webkit-clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0% 0%, 70% 0%, 100% 50%, 70% 100%, 0% 100%);
+  clip-path: polygon(0% 0%, 70% 0%, 100% 50%, 70% 100%, 0% 100%);
 }
 
 .arrow-card-end {
@@ -69,6 +69,11 @@ a:focus-visible {
 }
 
 @screen sm {
+  .arrow-card-start {
+    -webkit-clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+  }
+
   .arrow-card-avatar {
     -webkit-clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
